--- a/src/reset.scss
+++ b/src/reset.scss
@@ -12,11 +12,6 @@
   }
 
   body,
-  h1,
-  h2,
-  h3,
-  h4,
-  p,
   figure,
   figcaption,
   blockquote,
